# gradling

./: .gitignore  CLAUDE.md  Makefile  pyproject.toml
notebooks/: scratch.py
scripts/: init.sh
src/gradling/: __init__.py  cli.py  config.py  data.py  dir.py  logger.py  metrics.py  run.py  sample.py  test_cli.py  test_data.py  train.py
src/gradling/configs/: __init__.py  config.py  test_config.py  transformer.py
src/gradling/models/: __init__.py  gpt.py  test_gpt.py
src/gradling/models/bigram/: model.py
src/gradling/models/gpt/: __init__.py  common.py  config.py  model.py  sample.py  test_model.py  train.py
src/gradling/models/mlp/: __init__.py  model.py
src/gradling/modules/: __init__.py  attention.py  feed_forward.py  layer_norm.py  multi_head_attention.py  single_head_attention.py  test_attention.py
src/gradling/other/: train_names.py
src/gradling/pipelines/: __init__.py  transformer.py
src/gradling/pipelines/transformer/: __init__.py  common.py  sample.py  train.py
src/gradling/tokenizers/: __init__.py  character.py
tests/: conftest.py  test_cli.py  test_config.py  test_data.py  test_metrics.py
tests/models/: test_gpt.py
tests/modules/: test_attention.py  test_layer_norm.py  test_multi_head_attention.py  test_single_head_attention.py
tests/tokenizers/: test_character.py
