[project]
name = "gradling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Tom Firth", email = "16757412+tdfirth@users.noreply.github.com" }
]
requires-python = ">=3.14"
dependencies = [
    "jax>=0.9.0.1",
]

[project.scripts]
gradling = "gradling:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.15.1",
    "ty>=0.0.17",
]
