[project]
name = "gradling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Tom Firth", email = "16757412+tdfirth@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "flax>=0.12.4",
    "jax>=0.9.0.1",
    "matplotlib>=3.10.8",
    "optax>=0.2.6",
    "orbax>=0.1.9",
    "rich>=14.3.3",
    "rich-argparse>=1.7.2",
    "wandb>=0.25.0",
]

[project.optional-dependencies]
cuda = ["jax[cuda12]>=0.9.0.1"]

[project.scripts]
gradling = "gradling:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
ignore = [
    "E741",  # ambiguous variable names (common in ML: l, I, O)
    "E731",  # lambda assignments (useful for short transforms)
    "B023",  # loop variable in closure (common in JAX tree_map patterns)
    "B905",  # strict= in zip (rarely needed in ML data pipelines)
]

[tool.ruff.lint.isort]
known-first-party = ["gradling"]

[tool.ty.rules]
invalid-type-form = "ignore"

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "ipython>=9.10.0",
    "marimo>=0.20.1",
    "pytest>=9.0.2",
    "pytest-subtests>=0.15.0",
    "ruff>=0.15.1",
    "treescope>=0.1.10",
    "ty>=0.0.17",
]
